# OpenSubdiv

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md  appveyor.yml  azure-pipelines.yml  opensubdiv-config.cmake.in
documentation/: CMakeLists.txt  OpenSubdiv.doxy  README  additional_resources.rst  api_overview.rst  bfr_overview.rst  cmake_build.rst  code_examples.rst  compatibility.rst  contributing.rst  diagrams.odg  downloads.rst  dxptexviewer.rst  dxviewer.rst  examples_see_also.rst  far_overview.rst  getting_started.rst  glbatchviewer.rst  glevallimit.rst  glfvarviewer.rst  glpainttest.rst  glptexviewer.rst  glsharetopology.rst  glstencilviewer.rst  glviewer.rst  hbr_overview.rst  hedits.rst  intro.rst  intro_30.rst  license.rst  limiteval.rst  maya_osdpolysmooth.rst  mod_notes.rst  mtlptexviewer.rst  mtlviewer.rst  nav_template.txt  osd_overview.rst  osd_shader_interface.rst  painttest.rst  porting.rst  (+25 more)
documentation/css/: default.css  doxy.css  flavor.css  pygments.css  renderman-university.css  rst.css
documentation/tipuesearch/: tipuesearch.css  tipuesearch.js  tipuesearch.min.js  tipuesearch_set.js
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt  argOptions.cpp  argOptions.h  clDeviceContext.cpp  clDeviceContext.h  clInit.h  cudaDeviceContext.cpp  cudaDeviceContext.h  cudaInit.h  d3d11ControlMeshDisplay.cpp  d3d11ControlMeshDisplay.h  d3d11Hud.cpp  d3d11Hud.h  d3d11PtexMipmapTexture.cpp  d3d11PtexMipmapTexture.h  d3d11ShaderCache.cpp  d3d11ShaderCache.h  d3d11Utils.cpp  d3d11Utils.h  d3d11_compile.h  d3d11_hud.cpp  d3d11_hud.h  export_obj.py  font_image.cpp  font_image.h  framebuffer.glsl  glControlMeshDisplay.cpp  glControlMeshDisplay.h  glFramebuffer.cpp  glFramebuffer.h  glHud.cpp  glHud.h  glPtexMipmapTexture.cpp  glPtexMipmapTexture.h  glShaderCache.cpp  glShaderCache.h  glUtils.cpp  glUtils.h  gl_common.cpp  gl_common.h  (+34 more)
examples/derivativeTests/: CMakeLists.txt  derivativeTests.cpp
examples/dxPtexViewer/: CMakeLists.txt  dxPtexViewer.cpp  shader.hlsl  sky.cpp  sky.h  skyshader.hlsl
examples/dxViewer/: CMakeLists.txt  dxviewer.cpp  init_shapes.h  shader.hlsl
examples/evalTest/: CMakeLists.txt  algebra.h  evalTest.cpp  glhelpers.h  mainApple.mm  notes.md  shader.glsl
examples/facePartition/: CMakeLists.txt  shader.glsl  viewer.cpp
examples/farViewer/: CMakeLists.txt  farViewer.cpp  gl_fontutils.cpp  gl_fontutils.h  gl_mesh.cpp  gl_mesh.h  init_shapes.h
examples/glBatchViewer/: CMakeLists.txt  delegate.cpp  delegate.h  effect.cpp  effect.h  effectRegistry.cpp  effectRegistry.h  shader.glsl  shader_gl3.glsl  shapes.h  viewer.cpp
examples/glEvalLimit/: CMakeLists.txt  glEvalLimit.cpp  init_shapes.h  particles.cpp  particles.h
examples/glFVarViewer/: .glFVarViewer.cpp.swp  CMakeLists.txt  glFVarViewer.cpp  init_shapes.h  shader.glsl
examples/glImaging/: CMakeLists.txt  glImaging.cpp  init_shapes.h  shader.glsl
examples/glMultiMeshViewer/: CMakeLists.txt  shader.glsl  shader_gl3.glsl  viewer.cpp
examples/glPaintTest/: CMakeLists.txt  glPaintTest.cpp  init_shapes.h  paintShader.glsl  shader.glsl
examples/glPtexViewer/: CMakeLists.txt  glPtexViewer.cpp  imageshader.glsl  shader.glsl  shader_gl3.glsl  skyshader.glsl
examples/glShareTopology/: CMakeLists.txt  glShareTopology.cpp  init_shapes.h  meshRefiner.h  scene.h  sceneBase.cpp  sceneBase.h  shader.glsl  vbo.h
examples/glStencilViewer/: CMakeLists.txt  glStencilViewer.cpp  init_shapes.h  main.cpp
examples/glViewer/: .shader.glsl.swp  CMakeLists.txt  glViewer.cpp  init_shapes.h  shader.glsl  shader_gl3.glsl  viewer.cpp
examples/glutViewer/: CMakeLists.txt  cudaInit.h  shader.glsl  viewer.cpp  viewer_compat.cpp
examples/limitEval/: CMakeLists.txt  main.cpp
examples/mayaPolySmooth/: CMakeLists.txt  mayaPolySmooth.cpp  mayaPolySmooth.h  mayaPolySmooth.mel
examples/mayaPtexViewer/: AEopenSubdivPtexShaderTemplate.mel  CMakeLists.txt  OpenSubdivPtexShader.cpp  OpenSubdivPtexShader.h  OpenSubdivPtexShaderOverride.cpp  OpenSubdivPtexShaderOverride.h  cudaUtil.cpp  hbrUtil.cpp  hbrUtil.h  osdPtexMeshData.cpp  osdPtexMeshData.h  shader.glsl
examples/mayaPtexViewer_siggraph2012/: AEopenSubdivPtexShaderTemplate.mel  CMakeLists.txt  OpenSubdivPtexShader.cpp  hbrUtil.cpp  hbrUtil.h  shader.glsl
examples/mayaUVDisplacementViewer2011/: cudaInit.h  cudaUtil.cpp  hbrUtil.cpp  hbrUtil.h  meshTopology.h  vixo_smooth.cpp  vixo_smooth.h
examples/mayaViewer/: AEopenSubdivShaderTemplate.mel  CMakeLists.txt  OpenSubdivDrawOverride.cpp  OpenSubdivShader.cpp  OpenSubdivShader.h  OpenSubdivShaderOverride.cpp  OpenSubdivShaderOverride.h  cudaUtil.cpp  hbrUtil.cpp  hbrUtil.h  mayaViewer.cpp  osdMeshData.cpp  osdMeshData.h  shader.glsl
examples/mtlPtexViewer/: CMakeLists.txt  init_shapes.h  mtlPtexViewer.h  mtlPtexViewer.metal  mtlPtexViewer.mm
examples/mtlViewer/: CMakeLists.txt  init_shapes.h  mtlViewer.h  mtlViewer.metal  mtlViewer.mm
examples/mutex/: CMakeLists.txt  mutex.cpp  mutex.h
examples/osdPolySmooth/: CMakeLists.txt  osdPolySmooth.cpp  osdPolySmooth.h  osdPolySmooth.mel
examples/paintTest/: CMakeLists.txt  main.cpp  paintShader.glsl  shader.glsl
examples/projectTest/: CMakeLists.txt  main.cpp
examples/ptexCoord/: CMakeLists.txt  patchCommon.cpp  patchCommon.h  ptexCoord.cpp  vecTypes.h
examples/ptexViewer/: CMakeLists.txt  imageshader.glsl  shader.glsl  shader_gl3.glsl  skyshader.glsl  viewer.cpp
examples/python/: README.md  __init__.py  canvas.py  interactive.py  main.py  renderer.py  shaders.py  simple.glsl  utility.py  window.py
examples/simpleCpu/: CMakeLists.txt  algebra.h  glhelpers.h  main.cpp  mainApple.mm  mainGlut.cpp  notes.md  shader.glsl  simpleCpuSubdivision.cpp  simpleCpuSubdivision_org.cpp
examples/tessellateObjFile/: CMakeLists.txt  main.cpp
examples/topologySharing/: CMakeLists.txt  viewer.cpp
examples/uvViewer/: CMakeLists.txt  shader.glsl  viewer.cpp
examples/vtrViewer/: gl_mesh.cpp  (+13 more)
opensubdiv/: CMakeLists.txt  version.h
python/: CMakeLists.txt  LICENSE  README.md  setup.py
regression/: CMakeLists.txt
(+791 files in other folders)
